--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -4,3 +4,8 @@ $font-size-default: 1.6rem;
 
 // colors
 $color-black: rgb(29, 41, 42);
+
+// sizing
+$height-nav: 3rem;
+$height-footer: 3rem;
+$height-main: calc(100vh - $height-nav - $height-footer);
