linked grid, nav and footer stylesheets to main

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,6 @@
 @import '@/app/styles/global/utilities';
 
 // components
+@import '@/app/components/grid/grid.styles';
+@import '@/app/components/footer/footer.styles';
+@import '@/app/components/nav/nav.styles';
