added banner component, linked stylesheet, updated grid and added banner to layout

--- a/app/components/grid/_grid.styles.scss
+++ b/app/components/grid/_grid.styles.scss
@@ -1,4 +1,8 @@
 .grid {
   display: grid;
-  grid-template-rows: $height-nav $height-main $height-footer;
+  grid-template-rows: 
+    $height-banner 
+    $height-nav 
+    $height-main 
+    $height-footer;
 }
