--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -7,6 +7,7 @@ $color-black: rgb(29, 41, 42);
 $color-green: green;
 
 // sizing
-$height-nav: 3rem;
+$height-banner: 2rem;
 $height-footer: 3rem;
-$height-main: calc(100vh - $height-nav - $height-footer);
+$height-nav: 3rem;
+$height-main: calc(100vh - $height-banner - $height-nav - $height-footer);
