--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@
 @import '@/app/styles/global/utilities';
 
 // components
+@import '@/app/components/banner/banner.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/nav/nav.styles';
