added lato and poppins fonts

--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -1,10 +1,12 @@
 // typography
-$font-primary: 'open-sans';
+$font-primary: 'Lato', sans-serif;
+$font-header: 'Poppins', sans-serif;
 $font-size-default: 1.6rem;
 
 // colors
-$color-black: rgb(29, 41, 42);
+$color-black: #141313;
 $color-green: green;
+$color-white: #FFFFFF;
 
 // sizing
 $height-banner: 2rem;
