--- a/app/components/auth-form/auth-form.styles.scss
+++ b/app/components/auth-form/auth-form.styles.scss
@@ -1,3 +1,23 @@
 .auth-form {
-  color: $color-black;
+  width: 100vw;
+  padding: 1rem;
+
+  &__form {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1rem 0rem;
+  }
+
+  &__label {
+    margin-right: 1rem;
+  }
+
+  &__input {
+
+  }
+
+  &__button {
+  
+  }
 }
