--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,7 @@
 @import '@/app/components/banner/banner.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
+@import '@/app/components/logo/logo.styles';
 @import '@/app/components/nav/nav.styles';
 
 .home {
