--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,8 @@
 @import '@/app/components/hamburger/hamburger.styles';
 @import '@/app/components/logo/logo.styles';
 @import '@/app/components/nav/nav.styles';
+@import '@/app/components/nav-link/nav-link.styles';
+@import '@/app/components/nav-links/nav-links.styles';
 
 .home {
   background-image: url('/ceiling.jpeg');
