--- a/app/components/hero/hero.styles.scss
+++ b/app/components/hero/hero.styles.scss
@@ -1,9 +1,35 @@
-.home {
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100%;
   background-image: url('/ceiling.jpeg');
   background-position: center;
-}
 
+  &__content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 40%;
+  }
 
-.hero {
-  
+  &__text {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: $font-primary;
+    font-size: 5rem;
+    color: rgba(255, 255, 255, .9);
+    background-color: rgba(0, 0, 0, .5);
+  }
+
+  &__button {
+    cursor: pointer;
+    align-self: center;
+    padding: 1rem;
+    margin-top: 1rem;
+    background: none;
+    border: 1px solid $color-white;
+    color: $color-white;
+    background-color: $color-black;
+  }
 }
