--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 // components
 @import '@/app/components/auth-form/auth-form.styles';
 @import '@/app/components/banner/banner.styles';
+@import '@/app/components/category-menu/category-menu.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/hamburger/hamburger.styles';
