--- a/app/components/hero/hero.styles.scss
+++ b/app/components/hero/hero.styles.scss
@@ -2,35 +2,49 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url('/ceiling.jpeg');
-  background-position: center;
+
+  display: flex;
+  justify-content: center;
 
   &__content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-    bottom: 40%;
+    
   }
 
   &__text {
-    text-align: center;
-    text-transform: uppercase;
-    
+    border: 1px solid red;
+    color: $color-white;
     font-size: 5rem;
-    color: rgba(255, 255, 255, .9);
-    background-color: rgba(0, 0, 0, .5);
   }
 
   &__button {
+    position: absolute;
+    bottom: 30%;
+  }
+
+  &--closed {
+    display: none;
+  }
+}
+
+.block-menu {
+  position: absolute;
+  z-index: 20;
+  color: $color-white;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $color-black;
+
+  &__close {
     cursor: pointer;
-    align-self: center;
-    padding: 1rem;
-    margin-top: 1rem;
-    background: none;
-    font-family: $font-primary;
-    border: 1px solid $color-white;
-    color: $color-white;
-    background-color: $color-black;
+  }
+
+  &__list {
+    list-style: none;
+  }
+    
+  &--closed {
+    display: none;
   }
 }
