created block-menu component

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 // components
 @import '@/app/components/auth-form/auth-form.styles';
 @import '@/app/components/banner/banner.styles';
+@import '@/app/components/block-menu/block-menu.styles';
 @import '@/app/components/button/button.styles';
 @import '@/app/components/carousel/carousel.styles';
 @import '@/app/components/grid/grid.styles';
