--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -15,7 +15,7 @@
     top: 1rem;
     right: 1rem;
     background: none;
-    color: $color-white;
+    color: inherit;
     font-size: 2rem;
     border: none;
   }
@@ -28,6 +28,15 @@
 
   &__link {
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: inherit;
+    font-size: 3rem;
+    text-decoration: none;
+    text-transform: capitalize;
   }
     
   &--closed {
