--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -1,17 +1,18 @@
 .block-menu {
   position: absolute;
-  grid-template-rows: max-content 1fr;
   z-index: 1;
-  color: $color-white;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  font-family: $font-header;
+  color: $color-white;
   background-color: $color-black;
 
   &__close {
     cursor: pointer;
     position: absolute;
+    z-index: 5;
     top: 1rem;
     right: 1rem;
     background: none;
@@ -20,19 +21,27 @@
     border: none;
   }
 
-  &__links {
+  &__items {
     height: 100%;
     display: grid;
     list-style: none;
   }
 
-  &__link {
-    cursor: pointer;
+  &__item {
+    cursor: pointer;  
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__link {
+    display: flex;
+    align-items: end; 
     width: 100%;
     height: 100%;
+    padding: 1rem;
     color: inherit;
     font-size: 3rem;
     text-decoration: none;
