--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -1,10 +1,10 @@
 .block-menu {
-  position: absolute;
+  position: fixed;
   z-index: 1;
-  top: 0;
+  top: calc($height-banner + $height-nav);
+  bottom: $height-footer;
   left: 0;
   right: 0;
-  bottom: 0;
   font-family: $font-header;
   color: $color-white;
   background-color: $color-black;
