--- a/app/components/nav-links/nav-links.styles.scss
+++ b/app/components/nav-links/nav-links.styles.scss
@@ -1,7 +1,7 @@
 .nav-links {
-  position: absolute;
+  position: fixed;
   top: calc($height-nav + $height-banner);
-  bottom: 0;
+  bottom: $height-footer;
   left: 0;
   right: 0;
   padding: 3rem;
