--- a/app/styles/global/_base.scss
+++ b/app/styles/global/_base.scss
@@ -7,6 +7,7 @@
 }
 
 html {
+  height: 100%;
   font-size: 62.5%; // set rem to 10px
 }
 
@@ -15,5 +16,4 @@ body {
   font-size: $font-size-default;
   font-family: $font-primary;
   color: $color-black;
-  height: 100vh;
 }
