troubleshooting mobile view

--- a/app/components/grid/_grid.styles.scss
+++ b/app/components/grid/_grid.styles.scss
@@ -1,6 +1,8 @@
 .grid {
-  display: grid;
+  position: fixed;
   height: 100%;
+  width: 100%;
+  display: grid;
   grid-template-rows: 
     $height-banner 
     $height-nav 
