--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -12,4 +12,4 @@ $color-white: #FFFFFF;
 $height-banner: 2rem;
 $height-footer: 4rem;
 $height-nav: 4rem;
-$height-main: calc(100vh - $height-banner - $height-nav - $height-footer);
+$height-main: calc(100% - $height-banner - $height-nav - $height-footer);
