created and linked category stylesheet

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,3 +21,6 @@
 @import '@/app/components/nav-link/nav-link.styles';
 @import '@/app/components/nav-links/nav-links.styles';
 
+// pages
+@import '@/app/category/category.styles';
+
