--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/hamburger/hamburger.styles';
+@import '@/app/components/header/header.styles';
 @import '@/app/components/hero/hero.styles';
 @import '@/app/components/logo/logo.styles';
 @import '@/app/components/nav/nav.styles';
