--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,7 @@
 @import '@/app/components/banner/banner.styles';
 @import '@/app/components/block-menu/block-menu.styles';
 @import '@/app/components/button/button.styles';
+@import '@/app/components/card-grid/card-grid.styles';
 @import '@/app/components/carousel/carousel.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
