added styling to header and switch to functional component

--- a/app/components/header/header.styles.scss
+++ b/app/components/header/header.styles.scss
@@ -1,4 +1,9 @@
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-white;
+
   background-image: url('/architecture.jpeg');
   background-position: center;
   background-size: cover;
