styled nav-menu

--- a/app/styles/global/_base.scss
+++ b/app/styles/global/_base.scss
@@ -16,3 +16,9 @@ body {
   font-family: $font-primary;
   color: $color-black;
 }
+
+a {
+  text-decoration: none;
+  color: currentColor;
+  outline: none;
+}
