--- a/app/components/nav-links/nav-links.styles.scss
+++ b/app/components/nav-links/nav-links.styles.scss
@@ -1,19 +1,20 @@
 .nav-links {
+  display: grid;
   position: fixed;
+  z-index: 10;
   top: calc($height-nav + $height-banner);
   bottom: $height-footer;
   left: 0;
   right: 0;
-  padding: 3rem;
-  z-index: 20;
-
+  
   list-style: none;
-  background-color: rgb(255, 255, 255, .8);
-
+  
   font-family: $font-primary;
   font-size: 3rem;
   text-transform: uppercase;
   text-align: center;
+
+  background-color: $color-white;
 
   &--closed {
     display: none;
