--- a/app/components/button/button.styles.scss
+++ b/app/components/button/button.styles.scss
@@ -5,5 +5,11 @@
   font-family: $font-primary;
   border: 1px solid $color-white;
   color: $color-white;
-  background-color: $color-black;
+  background-color: rgba(0, 0, 0, .7);;
+  transition: background-color 0.4s ease-in-out;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, .7);
+    color: rgba(0, 0, 0, .7);
+  } 
 }
