refactored categories from pop-up block menu to its own route

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,5 +25,5 @@
 @import '@/app/components/nav-links/nav-links.styles';
 
 // pages
-@import '@/app/category/category.styles';
+@import '@/app/categories/category.styles';
 
