--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -38,7 +38,7 @@
 
   &__link {
     display: flex;
-    align-items: end; 
+    align-items: flex-end; 
     width: 100%;
     height: 100%;
     padding: 1rem;
