--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -1,10 +1,17 @@
 .card {
-  height: 15rem;
-
-  &:nth-child(odd) {
-    background-color: green;
+  position: relative;
+  padding: 1rem;
+  
+  &__image-container {
+    width: 100%;
   }
-  &:nth-child(even) {
-    background-color: gray;
+
+  &__image {
+    width: 100%;
+    height: auto;
+  }
+
+  &__header {
+    text-align: center;
   }
 }
