added link to card component

--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -1,7 +1,11 @@
 .card {
   position: relative;
   padding: 1rem;
-  
+
+  &__link {
+    cursor: pointer;
+  }
+
   &__image-container {
     width: 100%;
   }
