added new product form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,7 @@
 @import '@/app/components/nav/nav.styles';
 @import '@/app/components/nav-link/nav-link.styles';
 @import '@/app/components/nav-links/nav-links.styles';
+@import '@/app/components/product-form/product-form.styles';
 
 // pages
 @import '@/app/categories/[slug]/category-page.styles';
