--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import '@/app/components/card/card.styles';
 @import '@/app/components/card-grid/card-grid.styles';
 @import '@/app/components/carousel/carousel.styles';
+@import '@/app/components/category-form/category-form.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/hamburger/hamburger.styles';
