--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -1,21 +1,41 @@
 .card {
-  position: relative;
-  padding: 1rem;
+  display: grid;
+  grid-template-rows: repeat(4, max-content);
+  padding: 0rem 2rem;
+  gap: 1rem;
 
   &__link {
     cursor: pointer;
   }
 
   &__image-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
     width: 100%;
   }
 
   &__image {
-    width: 100%;
+    width: 75%;
     height: auto;
   }
 
   &__header {
     text-align: center;
+    text-transform: uppercase;
+    font-family: $font-header;
+    font-size: 3rem;
+    font-weight: 600;
+  }
+
+  &__text {
+    white-space: pre-line;
+  }
+
+  &__button {
+    justify-self: center;
+    background-color: $color-black;
+    text-transform: capitalize;
+    margin-left: auto;
   }
 }
