--- a/app/components/header/header.styles.scss
+++ b/app/components/header/header.styles.scss
@@ -2,6 +2,8 @@
   position: relative;
   display: flex;
   color: $color-black;
+  overflow: hidden;
+
 
   &--stacked {
     flex-direction: column;
@@ -9,11 +11,12 @@
   }
 
   &__image {
-    width: 100%;
-    height: auto;
+    object-fit: cover;
   }
 
   &__text {
+    position: relative;
+    z-index: 20;
     width: 100%;
 
     &--overlay {
