--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -25,6 +25,10 @@
     height: 100%;
     display: grid;
     list-style: none;
+
+    @media (min-width: $breakpoint-md) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   &__item {
@@ -38,7 +42,8 @@
 
   &__link {
     display: flex;
-    align-items: flex-end; 
+    align-items: flex-end;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     padding: 1rem;
@@ -46,6 +51,30 @@
     font-size: 3rem;
     text-decoration: none;
     text-transform: capitalize;
+
+    @media (min-width: $breakpoint-md) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__header-container {
+    padding: 1rem;
+  }
+
+  &__header {
+    text-transform: uppercase;
+  }
+
+  &__text-container {
+    display: none;
+    background-color: black;
+    padding: 1rem;
+    font-size: 1rem;
+
+    @media (min-width: $breakpoint-sm) {
+      display: block;
+    }
   }
     
   &--closed {
