--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -13,3 +13,7 @@ $height-banner: 2rem;
 $height-footer: 4rem;
 $height-nav: 4rem;
 $height-main: calc(100% - $height-banner - $height-nav - $height-footer);
+
+// breakpoints
+$breakpoint-sm: 500px;
+$breakpoint-md: 700px;
