added microgrammadbolext font

--- a/app/styles/global/_fonts.scss
+++ b/app/styles/global/_fonts.scss
@@ -3,3 +3,9 @@
 
 // poppins
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
+
+// microgrammadbolext regular
+@font-face {
+  font-family: 'MicrogrammaDBolExt Regular';
+  src: url('/fonts/MicrogrammaDBolExt.TTF') format('truetype');
+}
