--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -1,6 +1,6 @@
 // typography
 $font-primary: 'Lato', sans-serif;
-$font-header: 'Poppins', sans-serif;
+$font-header: 'MicrogrammaDBolExt.TTF', sans-serif;
 $font-size-default: 1.6rem;
 
 // colors
