--- a/app/components/header/header.styles.scss
+++ b/app/components/header/header.styles.scss
@@ -18,6 +18,8 @@
     position: relative;
     z-index: 20;
     width: 100%;
+    font-family: $font-header;
+    text-transform: uppercase;
 
     &--overlay {
       color: $color-white;
