--- a/app/components/hero/hero.styles.scss
+++ b/app/components/hero/hero.styles.scss
@@ -20,6 +20,7 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 5rem;
+    font-family: $font-header;
   }
 
   &__button {
