--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -24,6 +24,8 @@
   &__items {
     height: 100%;
     display: grid;
+    gap: 1rem;
+    padding: 1rem;
     list-style: none;
 
     @media (min-width: $breakpoint-md) {
@@ -71,9 +73,15 @@
     background-color: black;
     padding: 1rem;
     font-size: 1rem;
+    max-width: 45%;
 
     @media (min-width: $breakpoint-sm) {
       display: block;
+    }
+
+    @media (min-width: $breakpoint-md) {
+      max-width: 100%;
+      max-height: 25%;
     }
   }
     
