--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -4,6 +4,7 @@
   padding: 0rem 2rem;
   gap: 1rem;
 
+
   &__link {
     cursor: pointer;
   }
@@ -18,6 +19,8 @@
   &__image {
     width: 75%;
     height: auto;
+    padding: 1rem;
+    background-color: $color-black;
   }
 
   &__header {
