--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -1,8 +1,10 @@
 .card {
   display: grid;
   grid-template-rows: repeat(4, max-content);
-  padding: 0rem 2rem;
+  place-items: center;
+  padding: 2rem;
   gap: 1rem;
+  background-color: $color-white;
 
 
   &__link {
@@ -14,6 +16,10 @@
     display: flex;
     justify-content: center;
     width: 100%;
+
+    @media (min-width: $breakpoint-md) {
+      max-width: 30rem;
+    }
   }
 
   &__image {
