--- a/app/components/button/button.styles.scss
+++ b/app/components/button/button.styles.scss
@@ -11,6 +11,7 @@
   &:hover {
     background-color: rgba(255, 255, 255, .7);
     color: rgba(0, 0, 0, .7);
+    border: 1px solid $color-black;
   }
 
   &__link {
