--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -17,3 +17,5 @@ $height-main: calc(100% - $height-banner - $height-nav - $height-footer);
 // breakpoints
 $breakpoint-sm: 500px;
 $breakpoint-md: 700px;
+$breakpoint-lg: 1100px;
+$breakpoint-xl: 1400px;
