--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,7 +24,9 @@
 @import '@/app/components/nav/nav.styles';
 @import '@/app/components/nav-link/nav-link.styles';
 @import '@/app/components/nav-links/nav-links.styles';
+@import '@/app/components/product/product.styles';
 @import '@/app/components/product-form/product-form.styles';
+@import '@/app/components/thumbnail/thumbnail.styles';
 
 // pages
 @import '@/app/categories/[slug]/category-page.styles';
