--- a/app/products/[id]/product-page.styles.scss
+++ b/app/products/[id]/product-page.styles.scss
@@ -1,6 +1,4 @@
 .product-page {
-  display: grid;
-  grid-template-rows: max-content 1fr  1fr;
-  padding: 1rem;
+  position: relative;
   overflow: scroll;
 }
