added edit product page and form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,5 +30,5 @@
 
 // pages
 @import '@/app/categories/[slug]/category-page.styles';
-@import '@/app/products/[id]/product-page.styles';
+@import '@/app/products/[slug]/product-page.styles';
 
