--- a/app/components/hamburger/hamburger.styles.scss
+++ b/app/components/hamburger/hamburger.styles.scss
@@ -6,6 +6,10 @@
   width: 3rem;
   height: 2rem;
 
+  @media (min-width: $breakpoint-md) {
+    display: none;
+  }
+
   &__lines {
     position: relative;
     width: 3rem;
