--- a/app/components/nav-link/nav-link.styles.scss
+++ b/app/components/nav-link/nav-link.styles.scss
@@ -1,6 +1,5 @@
 .nav-link {
   cursor: pointer;
-  font-size: 4rem;
 
   a {
     display: flex;
@@ -9,5 +8,9 @@
     width: 100%;
     height: 100%;
     font-family: $font-header;
+  }
+
+  @media (min-width: $breakpoint-md) {
+    font-size: 1.5rem;
   }
 }
