added styling to card

--- a/app/components/card-grid/card-grid.styles.scss
+++ b/app/components/card-grid/card-grid.styles.scss
@@ -2,10 +2,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
+  place-items: center;
   overflow: scroll;
   background-color: $color-black;
-
-  @media (min-width: $breakpoint-md) {
-    grid-template-columns: 1fr 1fr;
-  }
 }
