--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -1,14 +1,31 @@
 .card {
+  position: relative;
   display: grid;
   grid-template-rows: repeat(4, max-content);
   place-items: center;
   padding: 2rem;
   gap: 1rem;
   background-color: $color-white;
+  overflow: hidden;
+  border: 1px solid red;
 
+  @media (min-width: $breakpoint-md) {
+    grid-template-rows: max-content 1fr max-content;
+    min-width: 69rem;
+    max-width: 69rem;
+    height: 69rem;
+    background-color: $color-black;
+  }
 
   &__link {
     cursor: pointer;
+    position: relative;
+    z-index: 0;
+
+    @media (min-width: $breakpoint-md) {
+      position: absolute;
+      width: 100%;
+    }
   }
 
   &__image-container {
@@ -16,16 +33,24 @@
     display: flex;
     justify-content: center;
     width: 100%;
-
-    @media (min-width: $breakpoint-md) {
-      max-width: 30rem;
-    }
   }
 
   &__image {
     width: 75%;
     height: auto;
     background-color: $color-black;
+
+    @media (min-width: $breakpoint-md) {
+      width: 100%;
+    }
+  }
+
+  &__header-container {
+    @media (min-width: $breakpoint-md) {
+      z-index: 10;
+      background-color:  rgba(0, 0, 0, .7);;
+      padding: 1rem;
+    }
   }
 
   &__header {
@@ -33,11 +58,32 @@
     text-transform: uppercase;
     font-family: $font-header;
     font-size: 3rem;
-    font-weight: 600;
+
+    @media (min-width: $breakpoint-md) {
+      color: $color-white;
+    } 
+  }
+
+  &__text-container {
+    z-index: 10;
+
+    @media (min-width: $breakpoint-md) {
+      display: flex;
+      align-items: flex-end;
+      height: 100%;
+    }
   }
 
   &__text {
     white-space: pre-line;
+
+    @media (min-width: $breakpoint-md) {
+      background-color: rgba(0, 0, 0, .7);
+      padding: 1rem;
+      display: flex;
+      align-items: flex-end;
+      color: $color-white;
+    }
   }
 
   &__button {
