--- a/app/styles/global/_variables.scss
+++ b/app/styles/global/_variables.scss
@@ -13,6 +13,7 @@ $height-banner: 2rem;
 $height-footer: 4rem;
 $height-nav: 4rem;
 $height-main: calc(100% - $height-banner - $height-nav - $height-footer);
+$card-length: 80rem;
 
 // breakpoints
 $breakpoint-sm: 500px;
