--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -77,6 +77,7 @@
   &__text-container {
     display: none;
     background-color: black;
+    border-radius: .5rem;
     padding: 1rem;
     font-size: 1rem;
     max-width: 45%;
