--- a/app/components/button/button.styles.scss
+++ b/app/components/button/button.styles.scss
@@ -7,6 +7,7 @@
   color: $color-white;
   background-color: rgba(0, 0, 0, .7);;
   transition: background-color 0.4s ease-in-out;
+  border-radius: .5rem;
 
   &:hover {
     @media (min-width: $breakpoint-md) {
