--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,4 +32,5 @@
 // pages
 @import '@/app/categories/[slug]/category-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
+@import '@/app/admin/signin/signin-page.styles';
 
