--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -43,7 +43,7 @@
   }
 
   &__link {
-    // position: relative;
+    position: relative;
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
