--- a/app/components/spinner/spinner.styles.scss
+++ b/app/components/spinner/spinner.styles.scss
@@ -1,6 +1,8 @@
 // spinner code from https://loading.io/css/
 
 .spinner-container {
+  position: absolute;
+  z-index: 100;
   left: 0;
   right: 0;
   top: 0;
