--- a/app/components/footer/footer.styles.scss
+++ b/app/components/footer/footer.styles.scss
@@ -3,5 +3,5 @@
   align-items: center;
   color: $color-white;
   background-color: $color-black;
-  padding: 1rem;
+  padding: $padding-default;
 }
