--- a/app/components/product/product.styles.scss
+++ b/app/components/product/product.styles.scss
@@ -6,7 +6,7 @@
   height: 100%;
   color: $color-white;
   background-color: $color-black;
-  padding: 1rem;
+  padding: $padding-default;
   overflow: scroll;
 
   @media (min-width: $breakpoint-lg) {
