--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -25,7 +25,7 @@
     height: 100%;
     display: grid;
     gap: 1rem;
-    padding: 1rem;
+    padding: $padding-default;
     list-style: none;
 
     @media (min-width: $breakpoint-md) {
@@ -49,7 +49,7 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    padding: 1rem;
+    padding: $padding-default;
     color: inherit;
     font-size: 3rem;
     text-decoration: none;
@@ -62,7 +62,7 @@
   }
 
   &__header-container {
-    padding: 1rem;
+    padding: $padding-default;
   }
 
   &__image {
@@ -77,10 +77,10 @@
 
   &__text-container {
     display: none;
-    background-color: black;
+    background-color: $color-black-transparent;
     border-radius: .5rem;
-    padding: 1rem;
-    font-size: 1rem;
+    padding: $padding-default;
+    font-size: $font-size-sm;
     max-width: 45%;
 
     @media (min-width: $breakpoint-sm) {
