--- a/app/components/header/header.styles.scss
+++ b/app/components/header/header.styles.scss
@@ -12,7 +12,7 @@
 
   &__image {
     object-fit: cover;
-    padding: 1rem;
+    padding: $padding-default;
   }
 
   &__text {
@@ -20,6 +20,7 @@
     z-index: 20;
     width: 100%;
     font-family: $font-header;
+    font-size: $font-size-header;
     text-transform: uppercase;
 
     &--overlay {
