--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
 @import '@/app/components/thumbnail/thumbnail.styles';
 
 // pages
+@import '@/app/admin/admin-page.styles';
 @import '@/app/categories/categories-page.styles';
 @import '@/app/categories/[slug]/category-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
