--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -6,40 +6,50 @@
   padding: 2rem;
   gap: 1rem;
   background-color: $color-white;
- 
 
   @media (min-width: $breakpoint-md) {
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: max-content 1fr max-content;
-    min-width: $breakpoint-md;
-    max-width: $max-width-card;
-    min-height: $breakpoint-md;
     background-color: $color-black;
-    overflow: hidden;
-    border-radius: $border-radius;
+
+    &:nth-child(even) > 
+    &__image-container {
+      grid-column: 1 / 2;
+    }
+
+    &:nth-child(even) > 
+    &__header-container > 
+    &__header {
+      text-align: end;
+    }
+
+    &:nth-child(even) > 
+    &__button {
+      grid-column: 2 / -1;
+    }
+  }
+
+  &__image-container {
+    width: 75%;
+    
+    @media (min-width: $breakpoint-md) {
+      width: 100%;
+      grid-column: 2 / -1;
+      grid-row: 1 / -1;
+    }
   }
 
   &__link {
     cursor: pointer;
     position: relative;
-    z-index: 0;
-
-    @media (min-width: $breakpoint-md) {
-      position: absolute;
-      width: 100%;
-    }
-  }
-
-  &__image-container {
-    position: relative;
     display: flex;
     justify-content: center;
-    width: 100%;
   }
 
   &__image {
     width: 75%;
     height: auto;
-    background-color: $color-black;
     border-radius: $border-radius;
 
     @media (min-width: $breakpoint-md) {
@@ -49,9 +59,10 @@
 
   &__header-container {
     @media (min-width: $breakpoint-md) {
-      z-index: 10;
-      background-color: $color-black-transparent;
-      padding: $padding-default;
+      width: 100%;
+      height: 100%;
+      padding: 0 $padding-default;
+      grid-row: 1 / 2;
       border-radius: $border-radius;
     }
   }
@@ -64,15 +75,13 @@
 
     @media (min-width: $breakpoint-md) {
       color: $color-white;
+      text-align: start;
     } 
   }
 
   &__text-container {
     @media (min-width: $breakpoint-md) {
-      z-index: 10;
-      display: flex;
-      align-items: flex-end;
-      height: 100%;
+      grid-row: 2 / 3;
     }
   }
 
@@ -80,12 +89,10 @@
     white-space: pre-line;
 
     @media (min-width: $breakpoint-md) {
-      background-color: $color-black-transparent;
       padding: $padding-default;
       display: flex;
       align-items: flex-end;
       color: $color-white;
-      border-radius: $border-radius;
     }
   }
 
@@ -94,5 +101,10 @@
     background-color:  $color-black-transparent;
     text-transform: capitalize;
     border-radius: $border-radius;
+
+    @media (min-width: $breakpoint-md) {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4; 
+    }
   }
 }
