added specs, features, text-blocks to product form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,5 +34,7 @@
 @import '@/app/categories/categories-page.styles';
 @import '@/app/categories/[slug]/category-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
+@import '@/app/products/edit/[slug]/edit-product-page.styles';
+@import '@/app/products/new/new-product-page.styles';
 @import '@/app/admin/signin/signin-page.styles';
 
