--- a/app/components/product-form/product-form.styles.scss
+++ b/app/components/product-form/product-form.styles.scss
@@ -1,7 +1,12 @@
 .product-form {
   display: grid;
+  grid-template-rows: repeat(4, max-content);
   gap: 1rem;
   padding: 2rem;
+
+  &__section {
+    display: grid;
+  }
 
   &__textarea {
     height: 20rem;
