--- a/app/components/product/product.styles.scss
+++ b/app/components/product/product.styles.scss
@@ -10,7 +10,7 @@
   overflow: scroll;
 
   @media (min-width: $breakpoint-lg) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   &__header {
