--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,7 @@
 @import '@/app/components/nav-links/nav-links.styles';
 @import '@/app/components/product/product.styles';
 @import '@/app/components/product-form/product-form.styles';
+@import '@/app/components/specs/specs.styles';
 @import '@/app/components/spinner/spinner.styles';
 @import '@/app/components/thumbnail/thumbnail.styles';
 
