--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,7 @@
 @import '@/app/components/product-form/product-form.styles';
 @import '@/app/components/specs/specs.styles';
 @import '@/app/components/spinner/spinner.styles';
+@import '@/app/components/text-blocks/text-blocks.styles';
 @import '@/app/components/thumbnail/thumbnail.styles';
 
 // pages
