--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import '@/app/components/card-grid/card-grid.styles';
 @import '@/app/components/carousel/carousel.styles';
 @import '@/app/components/category-form/category-form.styles';
+@import '@/app/components/featured-card/featured-card.styles';
 @import '@/app/components/features/features.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/grid/grid.styles';
