--- a/app/components/block-menu/block-menu.styles.scss
+++ b/app/components/block-menu/block-menu.styles.scss
@@ -36,10 +36,6 @@
     gap: 1rem;
     padding: $padding-default;
     list-style: none;
-
-    @media (min-width: $breakpoint-md) {
-      grid-template-columns: repeat(3, 1fr);
-    }
   }
 
   &__item {
@@ -65,7 +61,6 @@
     text-transform: capitalize;
 
     @media (min-width: $breakpoint-md) {
-      flex-direction: column;
       align-items: flex-start;
     }
   }
@@ -77,29 +72,12 @@
   &__image {
     z-index: -1;
     object-fit: cover;
+    // object-position: 50% 0%;
     border-radius: $border-radius;
   }
 
   &__header {
     text-transform: uppercase;
-  }
-
-  &__text-container {
-    display: none;
-    background-color: $color-black-transparent;
-    border-radius: .5rem;
-    padding: $padding-default;
-    font-size: $font-size-sm;
-    max-width: 45%;
-
-    @media (min-width: $breakpoint-sm) {
-      display: block;
-    }
-
-    @media (min-width: $breakpoint-md) {
-      max-width: 100%;
-      max-height: 40%;
-    }
   }
     
   &--closed {
