--- a/app/components/product/product.styles.scss
+++ b/app/components/product/product.styles.scss
@@ -1,7 +1,7 @@
 .product {
   position: relative;
   display: grid;
-  grid-template-rows: max-content max-content 1fr;
+  grid-template-rows: repeat(3, 1fr);
   width: 100%;
   height: 100%;
   color: $color-white;
@@ -11,6 +11,7 @@
 
   @media (min-width: $breakpoint-lg) {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, minmax(max-content, 1fr));
   }
 
   &__header {
@@ -34,6 +35,7 @@
 
     @media (min-width: $breakpoint-lg) {
      max-width: 80%;
+     grid-row: 1 / 3;
     }
   }
 
@@ -55,6 +57,7 @@
 
   // summary elements
   &__summary-section {
+    align-self: flex-start;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -69,5 +72,4 @@
   &__cta {
     align-self: center;
   }
-
 }
