created ImageDisplay component

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,6 +22,7 @@
 @import '@/app/components/hamburger/hamburger.styles';
 @import '@/app/components/header/header.styles';
 @import '@/app/components/hero/hero.styles';
+@import '@/app/components/image-display/image-display.styles';
 @import '@/app/components/logo/logo.styles';
 @import '@/app/components/nav/nav.styles';
 @import '@/app/components/nav-link/nav-link.styles';
