updated image display to change pictures on thumbnail click

--- a/app/components/thumbnail/thumbnail.styles.scss
+++ b/app/components/thumbnail/thumbnail.styles.scss
@@ -1,8 +1,11 @@
 .thumbnail {
+  cursor: pointer;
   position: relative;
+  width: 90%;
 
   &__image {
     width: 100%;
+    object-fit: cover;
     border-radius: $border-radius;
   }
 }
