--- a/app/components/image-display/image-display.styles.scss
+++ b/app/components/image-display/image-display.styles.scss
@@ -1,3 +1,31 @@
 .image-display {
-  
+  @media (min-width: $breakpoint-sm) {
+    max-width: 75%;
+  }
+
+  @media (min-width: $breakpoint-md) {
+    max-width: 50%;
+  }
+
+  @media (min-width: $breakpoint-lg) {
+   max-width: 80%;
+   grid-row: 1 / 3;
+  }
+
+  &__image-container {
+    position: relative;
+  }
+
+  &__image {
+    width: 100%;
+    height: auto;
+    border-radius: $border-radius;
+  }
+
+  &__thumbnail-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: .5rem;
+    margin-top: $padding-default;
+  }
 }
