--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import '@/app/components/card-grid/card-grid.styles';
 @import '@/app/components/carousel/carousel.styles';
 @import '@/app/components/category-form/category-form.styles';
+@import '@/app/components/contact-form/contact-form.styles';
 @import '@/app/components/features/features.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/grid/grid.styles';
@@ -37,6 +38,7 @@
 @import '@/app/admin/admin-page.styles';
 @import '@/app/categories/categories-page.styles';
 @import '@/app/categories/[slug]/category-page.styles';
+@import '@/app/contact/contact-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
 @import '@/app/products/edit/[slug]/edit-product-page.styles';
 @import '@/app/products/new/new-product-page.styles';
