--- a/app/components/card/card.styles.scss
+++ b/app/components/card/card.styles.scss
@@ -6,7 +6,10 @@
   padding: 2rem;
   gap: 1rem;
   background-color: $color-white;
-  border-top: 1px solid $color-white;
+  
+  &:not(:first-child) {
+    border-top: 1px solid $color-white;
+  }
 
   @media (min-width: $breakpoint-md) {
     width: 100%;
