--- a/app/components/contact-form/contact-form.styles.scss
+++ b/app/components/contact-form/contact-form.styles.scss
@@ -1,3 +1,41 @@
 .contact-form {
+  position: relative;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: repeat(7, max-content);
+  gap: $padding-default;
+  padding: $padding-lg;
   color: inherit;
+
+  @media (min-width: $breakpoint-md) {
+    width: 50%;
+  }
+
+  &__label {
+    align-self: center;
+  }
+
+  &__input {
+    padding: 0 1rem;
+    height: 3rem;
+  }
+
+  &__textarea {
+    height: 20rem;
+  }
+
+  &__button {
+    cursor: pointer;
+    padding: $padding-default;
+    grid-column: 2 / -1;
+    justify-self: flex-end;
+    border: 1px solid $color-white;
+    color: inherit;
+    background-color: transparent;
+
+    &:hover {
+      background-color: $color-white;
+      color: $color-black;
+    }
+  }
 }
