--- a/app/components/specs/specs.styles.scss
+++ b/app/components/specs/specs.styles.scss
@@ -19,6 +19,10 @@
     list-style: none;
   }
 
+  &__category {
+    margin-top: $padding-default;
+  }
+
   &__category-header {
     font-family: $font-header;
   }
