--- a/app/components/header/header.styles.scss
+++ b/app/components/header/header.styles.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
   display: flex;
+  justify-content: center;
   color: $color-black;
   overflow: hidden;
   background-color: $color-black;
@@ -18,10 +19,12 @@
   &__text {
     position: relative;
     z-index: 20;
-    width: 100%;
+    padding: $padding-default;
+    border-radius: $border-radius;
     font-family: $font-header;
     font-size: $font-size-header;
     text-transform: uppercase;
+    background-color: $color-black-transparent;
 
     &--overlay {
       color: $color-white;
