--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
 @import '@/app/components/product/product.styles';
 @import '@/app/components/product-form/product-form.styles';
 @import '@/app/components/specs/specs.styles';
+@import '@/app/components/specs-group/specs-group.styles';
 @import '@/app/components/spinner/spinner.styles';
 @import '@/app/components/text-blocks/text-blocks.styles';
 @import '@/app/components/thumbnail/thumbnail.styles';
