--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@
 @import '@/app/components/category-form/category-form.styles';
 @import '@/app/components/contact-form/contact-form.styles';
 @import '@/app/components/features/features.styles';
+@import '@/app/components/features-group/features-group.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/grid/grid.styles';
 @import '@/app/components/hamburger/hamburger.styles';
@@ -33,6 +34,7 @@
 @import '@/app/components/specs-group/specs-group.styles';
 @import '@/app/components/spinner/spinner.styles';
 @import '@/app/components/text-blocks/text-blocks.styles';
+@import '@/app/components/text-block-group/text-block-group.styles';
 @import '@/app/components/thumbnail/thumbnail.styles';
 
 // pages
