--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@
 @import '@/app/components/features-group/features-group.styles';
 @import '@/app/components/footer/footer.styles';
 @import '@/app/components/grid/grid.styles';
+@import '@/app/components/groups-group/groups-group.styles';
 @import '@/app/components/hamburger/hamburger.styles';
 @import '@/app/components/header/header.styles';
 @import '@/app/components/hero/hero.styles';
