added ImageInput component to categories form

--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -46,6 +46,7 @@
 @import '@/app/admin/admin-page.styles';
 @import '@/app/categories/categories-page.styles';
 @import '@/app/categories/[slug]/category-page.styles';
+@import '@/app/categories/edit/[slug]/category-edit-page.styles';
 @import '@/app/contact/contact-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
 @import '@/app/products/edit/[slug]/edit-product-page.styles';
