created images-input component

--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -20,6 +20,8 @@
 @import '@/app/_components/header/header.styles';
 @import '@/app/_components/hero/hero.styles';
 @import '@/app/_components/image-display/image-display.styles';
+@import '@/app/_components/image-input/image-input.styles';
+@import '@/app/_components/images-input/images-input.styles';
 @import '@/app/_components/logo/logo.styles';
 @import '@/app/_components/nav/nav.styles';
 @import '@/app/_components/nav-link/nav-link.styles';
