restyled button and header text

--- a/app/_components/header/header.styles.scss
+++ b/app/_components/header/header.styles.scss
@@ -22,11 +22,10 @@
     position: relative;
     z-index: 20;
     padding: $padding-default;
-    border-radius: $border-radius;
     font-family: $font-header;
     font-size: $font-size-header;
     text-transform: uppercase;
-    background-color: $color-black-transparent;
+    background-color: $color-black;
 
     &--overlay {
       color: $color-white;
