--- a/app/_components/button/button.styles.scss
+++ b/app/_components/button/button.styles.scss
@@ -3,17 +3,15 @@
   position: relative;
   background: none;
   font-family: $font-primary;
-  border: 1px solid $color-white;
+  border: none;
   color: $color-white;
-  background-color: $color-black-transparent;
+  background-color: $color-black;
   transition: background-color 0.4s ease-in-out;
-  border-radius: $border-radius;
 
   &:hover {
     @media (min-width: $breakpoint-md) {
-      background-color: rgba(255, 255, 255, .7);
-      color: $color-black-transparent;
-      border: 1px solid $color-black;
+      background-color: $color-white;
+      color: $color-black;
     }
   }
 
