--- a/app/_styles/global/_variables.scss
+++ b/app/_styles/global/_variables.scss
@@ -1,12 +1,12 @@
 // typography
-$font-primary: 'Lato', sans-serif;
-$font-header: 'MicrogrammaDBolExt.TTF', sans-serif;
-$font-size-default: 1.6rem;
-$font-size-header: 3rem;
+$font-primary: 'Poppins', sans-serif;
+$font-header: 'Montserrat', sans-serif;
+$font-size-default: 1.3rem;
+$font-size-header: 2.5rem;
 $font-size-sm: 1rem;
 
 // colors
-$color-black: #141313;
+$color-black: #292626;
 $color-black-transparent: rgba(0, 0, 0, .7);
 $color-green: green;
 $color-white: #FFFFFF;
