--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -50,6 +50,7 @@
 @import '@/app/categories/[slug]/category-page.styles';
 @import '@/app/categories/edit/[slug]/category-edit-page.styles';
 @import '@/app/contact/contact-page.styles';
+@import '@/app/product-groups/edit/[slug]/group-edit-page.styles';
 @import '@/app/products/[slug]/product-page.styles';
 @import '@/app/products/edit/[slug]/edit-product-page.styles';
 @import '@/app/products/new/new-product-page.styles';
