--- a/app/_components/nav/nav.styles.scss
+++ b/app/_components/nav/nav.styles.scss
@@ -4,4 +4,6 @@
   justify-content: space-between;
   align-items: center;
   padding: $padding-default;
+  background-color: $color-black;
+  color: $color-white;
 }
