--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -8,6 +8,7 @@
 
 // components
 @import '@/app/_components/banner/banner.styles';
+@import '@/app/_components/block/block.styles';
 @import '@/app/_components/block-menu/block-menu.styles';
 @import '@/app/_components/button/button.styles';
 @import '@/app/_components/card/card.styles';
