--- a/app/categories/categories-page.styles.scss
+++ b/app/categories/categories-page.styles.scss
@@ -4,6 +4,9 @@
 
 .categories {
   position: relative;
+  display: grid;
+  grid-template-rows: max-content 1fr;
   width: 100%;
   height: 100%;
+  overflow: scroll;
 }
