restyled block/block-menu components

--- a/app/_components/block-menu/block-menu.styles.scss
+++ b/app/_components/block-menu/block-menu.styles.scss
@@ -19,6 +19,10 @@
     border: none;
   }
 
+  &__item {
+    position: relative;
+  }
+
   &__edit-button {
     z-index: 20;
     cursor: pointer;
