created Summary component

--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -30,6 +30,7 @@
 @import '@/app/_components/product/product.styles';
 @import '@/app/_components/specs/specs.styles';
 @import '@/app/_components/spinner/spinner.styles';
+@import '@/app/_components/summary/summary.styles';
 @import '@/app/_components/text-blocks/text-blocks.styles';
 @import '@/app/_components/thumbnail/thumbnail.styles';
 
