added Summary styling

--- a/app/_components/block-menu/block-menu.styles.scss
+++ b/app/_components/block-menu/block-menu.styles.scss
@@ -3,8 +3,8 @@
   width: 100%;
   z-index: 1;
   font-family: $font-header;
-  color: $color-white;
   background-color: $color-white;
+  color: $color-black;
   overflow: scroll;
 
   &__close {
