--- a/app/_styles/global/_variables.scss
+++ b/app/_styles/global/_variables.scss
@@ -4,6 +4,7 @@ $font-header: 'Montserrat', sans-serif;
 $font-size-default: 1.3rem;
 $font-size-header: 2.5rem;
 $font-size-sm: 1rem;
+$font-size-lg: 2.5rem;
 
 // colors
 $color-black: #3e3b3b;
