added styling to product page

--- a/app/_components/features/features.styles.scss
+++ b/app/_components/features/features.styles.scss
@@ -19,6 +19,7 @@
 
   &__highlight {
     text-transform: uppercase;
-    font-weight: 700b;
+    font-family: $font-header;
+    font-weight: 700;
   }
 }
