--- a/app/_components/product/product.styles.scss
+++ b/app/_components/product/product.styles.scss
@@ -4,8 +4,6 @@
   grid-template-rows: repeat(3, 1fr);
   width: 100%;
   height: 100%;
-  color: $color-white;
-  background-color: $color-black;
   padding: $padding-lg;
   overflow: scroll;
 
@@ -50,6 +48,17 @@
   }
 
   &__cta {
-    align-self: center;
+    position: fixed;
+    bottom: $height-footer;
+    right: 0;
+    color: $color-black;
+    background-color: $color-white;
+    border: 1px solid $color-black;
+
+    &:hover {
+      color: $color-white;
+      background-color: $color-black;
+      border: 1px solid $color-black;
+    }
   }
 }
